--- a/index.html
+++ b/index.html
@@ -55,8 +55,7 @@
             <div class="about-content">
                 <div class="column right">
                     <div class="text">I Am [SANTHOSHKUMAR S] & Am a BE CSE STUDENT <span class="typing-"></span></div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-                        Diam sollicitudin tempor id eu nisl nunc mi. Nunc eget lorem dolor sed viverra ipsum nunc. 
+                    <p> You are a developer and a good team worker who builds websites using HTML and CSS. You are also skilled in Java and have a strong interest in Python programming. A significant area of your focus is cloud security, including Google Cloud Platform technologies. You are planning to build a simple e-commerce website using the Django framework, as well as a separate real-time communication app. You have also created presentations on diverse topics, including "Real time Groundwater resources evaluation" and "Draft a Professional Email for Job Application." 
                     </p>
                     <a href="https://www.instagram.com/" target="_blank" >Instagram</a><br>
                     <a href="https://www.youtube.com/">Youtube</a><br>
@@ -268,3 +267,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
