--- a/index.html
+++ b/index.html
@@ -109,8 +109,7 @@
             <div class="skills-content">
                 <div class="column left">
                     <div class="text">My creative skills & experiences.</div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-                        Diam sollicitudin tempor id eu nisl nunc mi. Nunc eget lorem dolor sed viverra ipsum nunc.
+                    <p> You are a developer and a good team worker, experienced in building websites using HTML and CSS. Your technical skills are robust, covering programming languages like Java and Python. You also have a specialized interest in cloud security and Google Cloud Platform technologies. Your project experience includes not only professional website development but also planning for a Django-based e-commerce store and a real-time communication app. Furthermore, you've demonstrated your expertise by creating detailed presentations on diverse technical and professional topics..
                      </p>
                     <a href="#">Read more</a>
                 </div>
@@ -267,4 +266,5 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
